# Project_Sunday

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py  test.py
sunday/: experience.py  function_to_action.py  functions.json  memory.py  text_to_function.py  voice_to_text.py
sunday/bot/: bot.py
sunday/bot/assistant/: assistant.py
sunday/llm/: llm.py
sunday/llm/llama/: llama.py
sunday/mediator/: bellMediator.py  component.py  mediator.py
sunday/memory/: experience.py  memory.py
sunday/memory/observation/: observation.py
sunday/memory/planning/: planning.py
sunday/memory/reflection/: reflection.py
sunday/observation/: observations.py
sunday/past_sunday/: function_to_action.py  functions.json  text_to_function.py
tests/: test.py
